syntax = "proto3";
package service;

message FileNode {
    string uid = 1;
    string type = 2;
    string path = 3;
    string name = 4;
    string hash = 5;
    bool broken = 6;
    repeated FileNode derivedFrom = 7;
    repeated InfoNode additionalInfo = 8;
}

message InfoNode {
    string uid = 1;
    string type = 2;
    Analyzer analyzer = 3;

    message DataNode {
        string type = 1;
        bytes data = 2;
    }
    repeated DataNode data = 4;
}

message Analyzer {
    string uid = 1;
    string name = 2;
}
